internal/gatewayapi/testdata/grpcroute-with-credential-injection.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - matches:
      - method:
          method: "Inject"
          service: "com.example"
          type: Exact
      backendRefs:
      - name: service-1
        port: 8080
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: HTTPRouteFilter
          name: credential-injection-1
httpFilters:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: HTTPRouteFilter
  metadata:
    name: credential-injection-1
    namespace: default
  spec:
    credentialInjection:
      header: x-credential
      overwrite: true
      credential:
        valueRef:
          name: credential-1
secrets:
- apiVersion: v1
  kind: Secret
  metadata:
    name: credential-1
    namespace: default
  data:
    credential: c2VjcmV0
